<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.loomq</groupId>
    <artifactId>loomq-parent</artifactId>
    <version>0.7.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>LoomQ Parent</name>
    <description>Parent POM for LoomQ delayed task queue</description>

    <modules>
        <module>loomq-bom</module>
        <module>loomq-core</module>
        <module>loomq-server</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Test Configuration -->
        <test.groups></test.groups>
        <test.excludedGroups>benchmark,slow,integration</test.excludedGroups>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.loomq</groupId>
                <artifactId>loomq-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.12.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <groups>${test.groups}</groups>
                        <excludedGroups>${test.excludedGroups}</excludedGroups>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>balanced-tests</id>
            <properties>
                <!-- CI 快速测试：排除耗时测试 -->
                <test.excludedGroups>benchmark,slow,integration</test.excludedGroups>
            </properties>
        </profile>
        <profile>
            <id>integration-tests</id>
            <properties>
                <test.groups>integration</test.groups>
                <test.excludedGroups></test.excludedGroups>
            </properties>
        </profile>
        <profile>
            <id>full-tests</id>
            <properties>
                <test.excludedGroups></test.excludedGroups>
            </properties>
        </profile>
    </profiles>
</project>
